@@ -4,6 +4,9 @@
 	  set, so that a priming(stub) subquery error can be handled.
 	- iterator stores if it is priming or not.
 	- log_query_info() neater logging.
+	- changed iterator so that it does not alter module_qstate.qinfo
+	  but keeps a chase query info. Also query_flags are not altered,
+	  the iterator uses chase_flags.
 
 21 June 2007: Wouter
 	- Fixup secondary buffer in case of error callback.
